--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "vrvpayments",
+  "name": "visanet_vrv",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.0",
+    "dotenv": "^16.4.5",
     "stripe": "^16.12.0"
-  },
-  "devDependencies": {},
-  "description": ""
+  }
 }
